--- a/demos/html_plus_js/game.html
+++ b/demos/html_plus_js/game.html
@@ -1,6 +1,9 @@
 <style>
     body{
+        color: #00ff00;
+        background-color: #002200;
         font-size: 2rem;
+        text-shadow: 0 0 6px #00ff00;
     }
     .sprite{
         position: absolute;
